# drones

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: config.rviz  params.yaml  plot.xml
include/: animation_rviz.h  ball_detector.h  command_creator.h  outerloop_controller.h  target_detector.h
launch/: animation.launch  animation_state_publisher.launch  config.rviz  drone_operator.launch  experimental.launch  experimental_setup.launch  multi_uav_mavros_sitl.launch  params.yaml  simulation_aruco.launch  simulation_ball.launch  simulation_ground_truth.launch  single_vehicle_spawn.launch  target_detect.launch
models/rotors_description/meshes/aruco/: aruco_4x4_0_3.dae  aruco_4x4_4_7.dae  aruco_4x4_8_11.dae
models/rotors_description/urdf/: component_snippets.xacro  iris_aruco_base.xacro  iris_ball_base.xacro  iris_base.xacro  materials.urdf.xacro  multirotor_base.xacro
msg/: BearingVectors.msg  EstimatedDronePosition.msg  EstimatedDronePositionArray.msg  Formation.msg  FormationControl.msg  FormationLink.msg
rotors_description/meshes2/: tag16h5_0_3.dae  tag16h5_4_7.dae  tag16h5_8_11.dae  tag36h11_0_3.dae  tag36h11_4_7.dae  tag36h11_8_11.dae
rotors_description/urdf/: component_snippets.xacro  iris_base.xacro  iris_base_V2.xacro
scripts/: formation_detector.py  formation_detector_ball.py
src/: addMarkers.cpp  animation_rviz.cpp  animation_rviz_node.cpp  ball_detector.cpp  ball_detector_node.cpp  broadcastTransformsBase.cpp  command_creator.cpp  drone_operator_node.cpp  formation_detector_aruco.cpp  outerloop_controller.cpp  target_detector.cpp
