<?xml version="1.0"?>
<package format="2">
  <name>drones</name>
  <version>0.0.0</version>
  <description>The drones package</description>

  <maintainer email="mathewslessa@gmail.com">matheus</maintainer>

  <license>MIT</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>eigen</depend>
  <depend>eigen_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
